fix bottom margin on mobile displays

--- a/theme.css
+++ b/theme.css
@@ -109,5 +109,6 @@ body {
 
     .footer {
         line-height: 1vw;
+        margin: 5vw auto;
     }
 }
